# ChangeLog for sci-mathematics/ginac
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/ginac/ChangeLog,v 1.34 2009/10/30 16:04:37 bicatali Exp $

  30 Oct 2009; Sébastien Fabbro <bicatali@gentoo.org> -ginac-1.3.7.ebuild,
  -ginac-1.4.3.ebuild:
  Removed old (#240654)

  29 Oct 2009; Markus Meier <maekke@gentoo.org> ginac-1.5.3.ebuild:
  amd64/x86 stable, bug #289106

  10 Oct 2009; Raúl Porcel <armin76@gentoo.org> ginac-1.5.1.ebuild:
  sparc stable wrt #271396

  27 Sep 2009; nixnut <nixnut@gentoo.org> ginac-1.5.1.ebuild:
  ppc stable #271396

  05 Sep 2009; Markus Meier <maekke@gentoo.org> ginac-1.5.1.ebuild:
  amd64 stable, bug #271396

  11 Aug 2009; Christian Faulhammer <fauli@gentoo.org> ginac-1.5.1.ebuild:
  stable x86, bug 271396

*ginac-1.5.3 (07 Aug 2009)

  07 Aug 2009; Sébastien Fabbro <bicatali@gentoo.org> +ginac-1.5.3.ebuild,
  +files/ginac-1.5.3-parser.patch:
  Version bump

  30 May 2009; Ulrich Mueller <ulm@gentoo.org> ginac-1.4.3.ebuild,
  ginac-1.5.1.ebuild:
  Remove app-text/tetex from dependencies, bug 227443.

  06 Apr 2009; Sébastien Fabbro <bicatali@gentoo.org> ginac-1.5.1.ebuild:
  Removed reference pdf doxygen generation, see bug #264774

*ginac-1.5.1 (03 Apr 2009)

  03 Apr 2009; Sébastien Fabbro <bicatali@gentoo.org>
  -files/ginac-1.4.1-gcc4.3.patch, +files/ginac-1.5.1-lexer_cpp.patch,
  +files/ginac-1.5.1-pkgconfig.patch, +ginac-1.5.1.ebuild:
  Version bump

  27 Mar 2009; Ferris McCormick <fmccor@gentoo.org> ginac-1.4.3.ebuild:
  Sparc stable, dependency for bug #245707.

  24 Oct 2008; Markus Meier <maekke@gentoo.org> ginac-1.4.3.ebuild:
  amd64/x86 stable, bug #238471

  20 Oct 2008; Sébastien Fabbro <bicatali@gentoo.org> ginac-1.4.3.ebuild:
  Filtered optimization more than O1 for gcc<4.2; now passes regression
  tests

  29 Sep 2008; Sébastien Fabbro <bicatali@gentoo.org> -ginac-1.4.1.ebuild,
  ginac-1.4.3.ebuild: