@@ -6,14 +6,16 @@ AUX ginac-1.5.1-pkgconfig.patch 340 RMD160 afa493de555a86c2aa2eff7251b8da272ed58
 AUX ginac-1.5.3-parser.patch 389 RMD160 3f061e05cd80e45c8040af373ecc50b9e3177cf7 SHA1 f49ea5bb5622c77b507096a5c9c77730c0471e55 SHA256 0bb747336e54ffda89527e4afc1e63942080db26d8f91486985884d953ae4aeb
 DIST ginac-1.5.1.tar.bz2 989950 RMD160 4a9aeb83045a1970baced1ae08f60d6f6c6bc8ce SHA1 d9b818197979200ea3d7c1bfba26d4a3980b819f SHA256 ed4404c44fdcc82468162d18cfb43bdc61a59c31b1e2da08fdcbce898955ce08
 DIST ginac-1.5.3.tar.bz2 996505 RMD160 0fc37e79d86b852b843689fbdf8ef00a6d539c5b SHA1 a2dc144729d4e57ee40bf0ea4ffde8c2e0d7f5f9 SHA256 06620b448cb8a6be78f4035b6f94b2394a41485dc374e0b76e15475173b65469
+DIST ginac-1.5.4.tar.bz2 997751 RMD160 5b70d70949a7f56e3de6cfe4321a61f353b1a82e SHA1 591ac6c55b3da76db36c735f70622841bc00fe60 SHA256 3902a6924b638d10ec84de78ea15e0579492fc20289599032cee7d60a2cbc355
 EBUILD ginac-1.5.1.ebuild 1721 RMD160 5fcec77baf739dd8bfd8c5690ce2d2f84e8c1521 SHA1 9eaf418ef5f8940e66e64f79c275e3f5704469ed SHA256 86610f9f141be2760814dad351d441a0841b540349bba7bd7238f84e0595dedc
 EBUILD ginac-1.5.3.ebuild 1749 RMD160 40cba95b585d0f225e6de5fc3915a30a18ce1ce7 SHA1 4f5dd9828072eb2a46f2da61fe6ae77d93e1732f SHA256 58036fbb710ed8129814bbeaf06c1d1a5996f6e394f72feba2cbd1e525bc27f1
-MISC ChangeLog 5941 RMD160 b0fe7f009084e98b0c4b7280c14978a8629cc5f3 SHA1 686bfd5bcd801c4b7eaca7291d76c7a99842b50e SHA256 330bf0df2d6bdbda4e998371c0e446b9041949623f50541b1db302d13fbde2ff
+EBUILD ginac-1.5.4.ebuild 1656 RMD160 d7dd03d5f003a706e7572b1d64d65ee69e92699a SHA1 f4f6e8e048936d917489d3625d482119adf164a2 SHA256 4f8c3b563dbcff48c818c03645d7f3021f10534204e3080210a2d19edb6ce26f
+MISC ChangeLog 6100 RMD160 3d29aff7645a125ff1e82d738739cf60d6f9b767 SHA1 85d8e6cb975f3b992c05ca9aff83e6baf0d0fd1c SHA256 eb23e86ba9ea058134c6011bbeb3c8b156f24be1114d64e4ae535bf699486bfa
 MISC metadata.xml 582 RMD160 0f0b60e373c8fee0efbebb7b7fd2420e2052082e SHA1 7e2a04c2da42292f37e33d06fc2e15305687bcdf SHA256 a68adc59dd6641c75f663a7be278804746fc15f64707b2570ed88918c6f9ff33
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.13 (GNU/Linux)
 
-iEYEARECAAYFAkrrGHwACgkQ1ycZbhPLE2AA7QCcCMtOJk+AEmxJxKZGvimSg+wz
-/iMAoKwAIr8k4i/LiYQQbOuhSE499aiV
-=Tc+i
+iEYEARECAAYFAkrwvNoACgkQ1ycZbhPLE2AkhwCbBTAp5pDJG9eAKUsOni/s1QKG
+bjIAn3JSqGwJxPrarnJDoYCJ3X9EHYsw
+=7+ql
 -----END PGP SIGNATURE-----
